--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
   "keywords": [],
   "dependencies": {
     "@fastify/sensible": "^6.0.3",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.2",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "fastify-postgres": "^3.6.0",
+    "fastify-static": "^4.7.0",
+    "js-yaml": "^4.1.0",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
